the rest of the table rows would be made.  For example, the following data:

#+BEGIN_EXAMPLE
  a,b
  c,
#+END_EXAMPLE

Would result in:
#+BEGIN_EXAMPLE lisp
'(("a" "b")
  ("c"))
#+END_EXAMPLE

Now this behavior should be fixed so the result for the same data will look as
follows:
#+BEGIN_EXAMPLE lisp
'(("a" "b")
  ("c" ""))
#+END_EXAMPLE

* Changes in version 0.5.1 (2022-02-05)
** Add Markdown table preset
    =dsv= now has Markdown table preset that allows to generate Markdown
    tables from a DSV data.
** New module: =(dsv version)=
    This module contains procedures that return information about the current
    Guile-DSV version.
** =dsv= now handles =--version= option
    When this option is passed to the =dsv= program it prints the version
    information and a short copyright note to the stdout.
** =dsv= now handles =--map-cell= option
    This option allows to apply an arbitrary Scheme code to each table cell
    before printing.
** =dsv= now handles =--filter-row= option
    This option allows to keep only that rows from a table for which the
    provided Scheme code returned #t.
** =dsv= now handles =--filter-column= option
    This option allows to keep only that columns from a table for which the
    provided Scheme code returned #t.

* Changes in version 0.5.0 (2021-12-12)
** Bugfixes
*** Fix a regression in =dsv --summary= introduced in 0.4.1
** API changes in the =dsv= tool
    Make table style more configurable by adding new table parameters.  Some
    old parameters are renamed to make the CLI API more consistent.
** =dsv= now handles =--with-header= option
    This option allows to use the first row of data as the table header.

    When pseudo-graphical tables are printed to the screen the first row that
    contains the header now has different style (which is configurable.)

    Thanks to Dr. Arne Babenhauserheide <https://www.draketo.de/> for the
    idea.
** New table preset: "org"